--- a/cards/templates/cards/base.html
+++ b/cards/templates/cards/base.html
@@ -19,18 +19,22 @@
   <body>
     {% block snowcanvas %}{% endblock snowcanvas %}
     <div class="container">
-      <div class="row">
-        <div class="twelve columns" style="margin-top: 10%;">
-          {% block content %}
-          {% endblock content %}
-        </div>
-      </div>
 
       <div class="row">
-        <div class="twelve columns">
-          <p>&copy; 2015 <a href="https://github.com/menzenski/django-year-end-site">Matthew Menzenski</a>.</p>
+
+        <div class="two columns"></div>
+
+        <div class="eight columns" style="margin-top: 10%;">
+          {% block content %}
+          {% endblock content %}
+
+          {% block footer %}
+            <p>&copy; 2015 <a href="https://github.com/menzenski/django-year-end-site">Matthew Menzenski</a>.</p>
+          {% endblock footer %}
         </div>
+
+        <div class="two columns"></div>
       </div>
-    </div>
+   </div>
   </body>
 </html>
